<resources>
    <string name="app_name">HermanosApp</string>
    <string name="identifiquese">Identifiquese:</string>
    <string name="mostrar_hermanos">Mostrar Hermanos</string>
    <string name="estado">Estado</string>
    <string name="cambiar_estado">Cambiar estado</string>
    <string name="administrador">Administrador</string>
    <string name="opciones_administraci_n">Opciones administración</string>
    <string name="nombre">Nombre</string>
    <string name="contrasenia">Contraseña</string>
    <string name="a_adir_usuario">Añadir usuario</string>
    <string name="eliminar_usuario">Eliminar usuario</string>
    <string name="modificar_contrasenia">Modificar contraseña</string>
</resources>
